[package]
name = "gallivant-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
clap = { version = "4.4.11", features = ["derive"] }
gallivant = { path = "../gallivant" }
serialport = "4.3.0"
